# cylindrix

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  glcylindrix.dsp  glcylindrix.dsw  todo.txt  vcpkg.json
ios/cylindrix/cylindrix/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  cylindrix-Info.plist  cylindrix-Prefix.pch  main.m
ios/cylindrix/cylindrix.xcodeproj/: project.pbxproj
ios/cylindrix/cylindrix/Shaders/: Shader.fsh  Shader.vsh
src/: ai.cpp  ai.h  ai_move.cpp  ai_move.h  ai_util.cpp  ai_util.h  base.cpp  base.h  clipping.cpp  clipping.h  collide.cpp  collide.h  commands.cpp  commands.h  config.cpp  config.h  do_state.cpp  do_state.h  energy.cpp  energy.h  events.cpp  events.h  explode.cpp  explode.h  fli.cpp  fli.h  fx.cpp  fx.h  gameloop.cpp  gameloop.h  glcylindrix.cpp  glcylindrix.h  glescylindrix.cpp  hud.cpp  hud.h  jonsb.cpp  jonsb.h  keys.cpp  keys.h  level.cpp  (+44 more)
src/legacy/: cdrom.h  cuts.c  cuts.h  dosbuff.c  dosbuff.h  gameipx.c  gameipx.h  glext.h  glh_genext.h  input.c  input.h  joncd.c  joncd.h  jonipx.c  jonipx.h  jonmouse.c  jonmouse.h  jonsb.c  joy.c  joy.h  modem.c  modem.h  newai.h  packets.c  packets.h  rotbmp.c  rotbmp.h  sb_defs.h  sb_digi.h  sb_lib.h  sb_mod.h  sb_stub.c  sb_stub.h  sbdriver.h  serial.c  smartmem.c  smartmem.h  user.c  user.h  winmain.c  (+1 more)
src/system/: system.h
src/system/darwin/: wiimote.cpp  wiimote.h
src/system/glut/: sound.cpp  system.cpp
src/system/ios/: system.cpp
src/system/openal/: sound.cpp
src/system/sdl/: system.cpp
src/system/win32/: sound.cpp  system.cpp  winmain.cpp
utils/: fixpeople.c  fixtanks.c
